# kuma

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  kuma.yaml  local.env.example  package-lock.json  package.json  tokens.ethereum.json
.github/workflows/: rust.yml
.sqlx/: query-07425e7d1c5734a37a8dd2f7be0fa8ec89497f6497cfa1aa21a53ea7648c21c4.json  query-3e7cf4b64755eeadf131ef8f06cd9b57ca6e9c609f03425ea20664efda618906.json  query-5d1a5659c9f29c779ba7d376e9ce3299d1ed2c8bcc06f54e7f0b5a9b050f3e69.json  query-6e4f66276c73bae425b410a4736384915f1c4a8b23dd6a1fa6777ecd84b97306.json  query-71e1ff0f82875e8891b77529797d59f0a16b0bcf3369bb59a3150520612a4265.json  query-8a51af17e9c1b7876144c12b3175f95944cd7baf1186d3e0e89935398b92c33f.json  query-9576c4800f8e2ee8bcf57f55ee32a4b5a970b107b73cd35551d8b8d66bd127cc.json  query-aa6c599962383c20a77355685ce7bf76396e2190c167db68fecbd8fc289fd9fe.json  query-aebeecb60576f6669c7ac674f45505b1455d6995367eee981d8ef7687099ced9.json  query-d11815661d4d318f4defcda1bae64cd4b81bdedc3d2865e3c53880957ed79288.json  query-e523561c4761c90bd79a45f0a82c3d0985dadeb071eeca8d56d03c4b15a97090.json  query-ec2347555857d6f83c9f10957ae8bd6047905810b8b8e17eff76b1d89e959f1a.json  query-f27b563dd6f6d37a0109ae8bb29a4c7ef7bfbf493845b149351cb524fb76fc86.json  query-fa14e983416242984135e3554a175379bcd61f49d813e80b39f950239fae1bc5.json
crates/api/: Cargo.toml  README.md
crates/api/migrations/: 001_initial.sql  002_seed_mock_data.sql  003_seed_arbitrage_signals.sql
crates/api/src/: database.rs  lib.rs  main.rs  models.rs
crates/api/src/database/: repositories.rs
crates/api/src/routes/: signals.rs  spot_prices.rs
crates/backend/: Cargo.toml  README.md
crates/backend/migrations/: 001_initial.sql  002_seed_mock_data.sql  003_seed_arbitrage_signals.sql
crates/backend/src/: config.rs  database.rs  lib.rs  main.rs  models.rs  pair.rs  state.rs
crates/backend/src/database/: repositories.rs
crates/backend/src/routes/: mod.rs  signals.rs  spot_prices.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  dry_run.rs  execute.rs  generate_signals.rs  kuma.rs  main.rs  permit.rs  tokens.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: chain.rs  config.rs  lib.rs  signals.rs  spot_prices.rs
crates/core/src/collector/: balances.rs  builder.rs  eth.rs  mod.rs  tycho.rs
crates/core/src/database/: mod.rs  repositories.rs  signals.rs  spot_prices.rs
crates/core/src/state/: balances.rs  block.rs  mod.rs  pair.rs
crates/core/src/strategy/: builder.rs  mod.rs  precompute.rs  simulation.rs
crates/kuma-cli/: Cargo.toml  Config.yaml
crates/kuma-cli/src/: assets.rs  block.rs  chain.rs  config.rs  kuma.rs  main.rs  pair.rs  signals.rs  state_update.rs  strategy.rs  utils.rs
crates/kuma-cli/src/collector/: builder.rs  mod.rs
crates/kuma-cli/src/encoder/: mod.rs
crates/kuma-cli/src/signals/: mod.rs
crates/kuma-cli/src/state/: block.rs  mod.rs  pair.rs
crates/kuma-cli/src/strategies/: builder.rs  mod.rs  refactored_builder.rs  utils.rs
crates/kuma-cli/src/strategy/: mod.rs  precompute.rs  simulation.rs
crates/kuma-cli/src/tycho/: builder.rs  mod.rs  state_update.rs
crates/kuma-core/: Cargo.toml
crates/kumad/: Cargo.toml
crates/kumad/src/: config.rs  lib.rs  main.rs  telemetry.rs
crates/kumad/src/binance/: mod.rs  worker.rs
crates/kumad/src/binance_collector/: mod.rs
crates/kumad/src/kuma/: mod.rs
crates/kumad/src/signals/: mod.rs
crates/kumad/src/strategy/: builder.rs  mod.rs
crates/kumad/src/uniswap/: mod.rs
migrations/: 001_initial.sql  002_seed_mock_data.sql  002_seed_mock_spot_prices.sql  003_seed_arbitrage_signals.sql  003_seed_mock_signals.sql
src/: lib.rs  main.rs
src/binance/: mod.rs
src/binance_collector/: book_ticker.rs  mod.rs
src/kuma/: mod.rs
src/uniswap_collector/: mod.rs
webapp/: Dockerfile  package-lock.json  package.json  tsconfig.json
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/components/: tokenPairPicker.tsx
webapp/src/components/signals/: columns.tsx  table.tsx
webapp/src/components/spot_prices/: columns.tsx  table.tsx
webapp/src/lib/: api-client.ts  api-client.tsx  types.ts
