[package]
name = "kuma"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
figment = { version = "0.10.19", features = ["env"] }
futures = "0.3.31"
humantime = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "once_cell",
    "tracing",
] }
