[workspace]
members = ["crates/cli", "crates/core", "crates/kumad", "crates/backend"]
resolver = "3"

[workspace.dependencies]
alloy = "1.0.12"
alloy-chains = "0.2.5"
alloy-primitives = "^1.0.0"
binance = "0.21.0"
color-eyre = "0.6.3"
figment = { version = "0.10.19", features = ["yaml", "env"] }
futures = "0.3.31"
humantime = "2.1.0"
http = "1.3.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
taplo = "0.13.2"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "once_cell",
    "tracing",
] }
tycho-execution = "0.111.0"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.127.1", features = [
    "evm",
] }
tycho-common = "0.77.1"
uniswap-sdk-core = "5.1.0"
uniswap-v3-sdk = { version = "5.0.0", features = ["extensions"] }
