[package]
name = "kuma-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
kuma-core = { path = "../core" }

sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
color-eyre = "0.6.3"
figment = { version = "0.10", features = ["yaml", "env"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
axum-test = "18.0.0-rc3"
serde_urlencoded = "0.7"
