[package]
name = "kuma-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
core = { package = "kuma-core", path = "../core" }
color-eyre = { workspace = true }
figment = { workspace = true, features = ["env", "yaml"] }
futures = { workspace = true }
http = { workspace = true }
mockall = "0.13.1"
num-bigint = { workspace = true }
num-traits = { workspace = true }
proptest = "1.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing",
    "once_cell",
] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tokio-test = "0.4.4"
tycho-execution = { workspace = true }
tycho-simulation = { workspace = true }
tycho-common = { workspace = true }
