[package]
name = "kuma-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
core = { package = "kuma-core", path = "../kuma-core" }
color-eyre = { workspace = true }
figment = { workspace = true, features = ["env", "yaml"] }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing",
    "once_cell",
] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full", "rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tycho-execution = "0.100.1"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.116.0", features = [
    "evm",
] }
tycho-common = "0.71.4"
num-bigint = "0.4.6"
mockall = "0.13.1"
proptest = "1.4.0"
