[package]
name = "kuma-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
core = { package = "kuma-core", path = "../kuma-core" }
color-eyre = { workspace = true }
figment = { workspace = true, features = ["env", "yaml"] }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing",
    "once_cell",
] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tycho-execution = "0.100.1"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", package = "tycho-simulation", tag = "0.116.0", features = [
    "evm",
] }
tycho-common = "0.70.9"

[dev-dependencies]
serde_yaml = "0.9.34"
