[package]
name = "kumad"
version = "0.1.0"
edition = "2024"

[dependencies]
kuma-core = { path = "../core" }

alloy = { workspace = true }
alloy-primitives = { workspace = true }
binance = { workspace = true }
color-eyre = { workspace = true }
figment = { workspace = true, features = ["env"] }
futures = { workspace = true }
humantime = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
taplo = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "once_cell",
    "tracing",
] }
tycho-common = { workspace = true }
